# ADA

./: .env  .env.example  .gitignore  API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_COMPLETION_SUMMARY.sh  AUDIT_DELIVERABLES_INDEX.md  AUDIT_REPORT.md  CHECKLIST.md  COMPLIANCE_DELIVERY_SUMMARY.md  COMPLIANCE_FRAMEWORK.md  COMPLIANCE_README.md  CONTRIBUTING.md  DELIVERY_INDEX.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER.md  ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  EXECUTIVE_BRIEF.md  EXECUTIVE_STATUS_REPORT.md  EXECUTIVE_VALUATION_SUMMARY.md  FULL_AUDIT_AND_VALUATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  INSTITUTIONAL_GOVERNANCE.md  ISSUES_FOUND.md  PERFORMANCE_OPTIMIZATION.md  PHASE2_README.md  PHASE3_ROADMAP.md  PROJECT_INDEX.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY.sh  QUICKSTART.md  REAL_INFRASTRUCTURE_TEST.sh  REAL_INFRASTRUCTURE_VERIFICATION.md  RWA_MULTI_CHAIN_SETUP.md  SECURITY.md  SMART_CONTRACTS_DEPLOYMENT.md  SMART_CONTRACTS_OVERVIEW.md  (+18 more)
cardano-rwa-qh/contracts/igar/: README.md  cabal.project  igar.cabal
cardano-rwa-qh/contracts/igar/src/IGAR/: Types.hs
cardano-rwa-qh/contracts/igar/src/IGAR/Governance/: MultiSig.hs
cardano-rwa-qh/contracts/igar/src/IGAR/Oracle/: Attestations.hs
cardano-rwa-qh/contracts/igar/src/IGAR/Policy/: AllowlistNFT.hs  SeriesToken.hs
cardano-rwa-qh/contracts/igar/src/IGAR/Utils/: Crypto.hs  DatumCodec.hs
cardano-rwa-qh/contracts/igar/src/IGAR/Validator/: ComplianceRef.hs  (+1 more)
cardano-rwa-qh/contracts/igar/test/Spec/: Governance.hs  NegativePaths.hs  PolicySeriesToken.hs  RoyaltyVaultState.hs
(+344 files in other folders)
